[package]
name = "coin-price-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
reqwest = "0.11.18"
serde = "1.0.181"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.29.1", features = ["full"] }
